secondfile/objects/DHStatus_A_End_Demarc__c.object
<CustomObject>
    <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Providers-DHStatus-A End Demarc</description>
    <fields>
        <fullName>ATT_Demarc_Label__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Provider- A End Demarc- ATT Demarc Label</description>
        <label>ATT Demarc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Verizon_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Providers-DHStatus-A End Demarc-DHStatus-Verizon Provider</description>
        <label>DHStatus-Verizon Provider</label>
        <referenceTo>DHStatus_Verizon_Provider__c</referenceTo>
        <relationshipLabel>DHStatus-A End Demarc</relationshipLabel>
        <relationshipName>DHStatus_A_End_Demarc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extended_Wire_Indicator__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Provider- A End Demarc-Extended Wire Indicator</description>
        <label>Extended Wire Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Type__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Provider- A End Demarc-Jack Type</description>
        <label>Jack Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Demarc_Label__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Provider- A End Demarc- Provider Demarc Label</description>
        <label>Provider Demarc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-A End Demarc</label>
    <nameField>
        <displayFormat>AED-{00000}</displayFormat>
        <label>DHStatus-A End Demarc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-A End Demarc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>